--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Introduction to the DOM Lab</title>
+</head>
+
+<body>
+    <!--All our work for this lesson will go here-->
+    <h1>My HTML adventure</h1>
+    <h2>New adventure</h2>
+    <p>We're writing HTML markup to display in our <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a>
+        markup to
+        display in our <strong>browser</strong>. We're
+        basically telling computers what to do. <em>Neat!</em></p>
+    <table>
+        <thead>
+            <tr>
+                <th>Element name </th>
+                <th>Display Value</th>
+            </tr>
+        </thead>
+    </table>
+</body>
+
+</html>
